improve the code

--- a/details.html
+++ b/details.html
@@ -33,10 +33,32 @@
             <h1 class="details-name">Bill Mahoney</h1>
             <h3 class="details-jop">Product owner</h3>
             <p class="detalis-text">
-              Loren Iposom Loren IposomLoren IposomLoren IposomLoren IposomLoren
-              IposomLoren IposomLoren IposomLoren IposomLoren IposomLoren
-              IposomLoren IposomLoren IposomLoren IposomLoren IposomLoren
-              IposomLoren IposomLoren IposomLoren Iposom
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+              tempor posuere magna vitae consequat. Nullam sed lacus quis diam
+              porttitor mattis. Mauris imperdiet molestie accumsan. Cras semper
+              ullamcorper ultricies. Fusce nec tincidunt ipsum, eu varius
+              ligula. Cras nisl mauris, pulvinar sit amet leo ut, euismod
+              blandit ipsum. Phasellus vehicula, quam eu auctor vulputate, massa
+              sapien sodales mauris, sit amet mattis enim sem vitae mauris.
+              Donec eu enim rutrum, fermentum sapien et, tempor leo. Duis auctor
+              molestie felis, id bibendum erat cursus vitae. Nulla nunc lacus,
+              congue non vehicula id, malesuada euismod neque. In gravida in dui
+              vitae dapibus.
+            </p>
+            <p class="detalis-text">
+              Donec posuere euismod sapien. Fusce dictum mauris in nibh vehicula
+              blandit. Aenean mattis erat purus, nec tincidunt lectus porta eu.
+              Fusce nulla turpis, elementum sit amet orci nec, consectetur
+              malesuada nulla. Aenean eros nulla, molestie eu tempus ac, congue
+              vel enim. Nam pellentesque vel dolor quis hendrerit. Mauris
+              eleifend, nulla sed sodales laoreet, arcu quam aliquet diam,
+              iaculis viverra nisl enim a nulla. Curabitur vel augue sit amet
+              diam rutrum feugiat at at neque. Class aptent taciti sociosqu ad
+              litora torquent per conubia nostra, per inceptos himenaeos.
+              Praesent dui nulla, facilisis eu convallis nec, luctus ut ligula.
+              Mauris sit amet elementum nunc. Nullam lobortis bibendum ipsum sit
+              amet congue. Sed dignissim dapibus lacinia. In hac habitasse
+              platea dictumst.
             </p>
           </div>
         </div>
